--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="./photo-subpages2/scs-ball.html">Ball Hard</a>
         <a href="./photo-subpages2/moving.html">Moving</a>
         <a href="./photo-subpages2/grad.html">Graduation</a>
-        <a href="./photo-subpages2/headshots.html">Headshots</a>
+        <!-- <a href="./photo-subpages2/headshots.html">Headshots</a> -->
         <a href="./photo-subpages2/the-tartan.html">The Tartan</a>
     </div>
     <a href="#"><span class="majors">Video</span></a>
