--- a/photo-subpages2/kappa-alpha-theta.html
+++ b/photo-subpages2/kappa-alpha-theta.html
@@ -18,7 +18,7 @@
             <a href="./scs-ball.html">Ball Hard</a>
             <a href="./moving.html">Moving</a>
             <a href="./grad.html">Graduation</a>
-            <a href="./headshots.html">Headshots</a>
+            <!-- <a href="./headshots.html">Headshots</a> -->
             <a href="./the-tartan.html">The Tartan</a>
         </div>
         <a href="#"><span class="majors">Video</span></a>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">A sorority I joined in my junior year and dropped the following, Kappa Alpha Theta is a prominent memory of my college career. A very public organization on campus that seemed exclusive and polarizing depending on whom you talked to, I was fascinated about the role that Greek Life played in people's sense of community. While a point of contention in my own life, I can confidently attest to its cultivation of true sisterhood for many.</p>
+        <p class="photo-blurb"> Sororities are, and have been, a prominent form of community in today's college campus. Exclusive and often polarizing depending on whom you talk to, they invite much fascination from students and online media alike. Even with their well-documented flaws, they remain a reliable engine for lifelong friendship, built on sustained in-person time that few other college spaces still offer. In a campus culture increasingly shaped by digital performance, sororities fit right in––yet still provide a structured intimacy that still pulls people into genuine connection.</p>
         <div class="row">
             <div class="column">
                 <img src="../files/kat-formal/a.jpg">
