--- a/photo-subpages2/xyh.html
+++ b/photo-subpages2/xyh.html
@@ -18,7 +18,7 @@
             <a href="./scs-ball.html">Ball Hard</a>
             <a href="./moving.html">Moving</a>
             <a href="./grad.html">Graduation</a>
-            <a href="./headshots.html">Headshots</a>
+            <!-- <a href="./headshots.html">Headshots</a> -->
             <a href="./the-tartan.html">The Tartan</a>
         </div>
         <a href="#"><span class="majors">Video</span></a>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="main">
-        <p class="photo-blurb">夕阳红, or "xi yang hong", translates literally to sunset red––a euphemism for the passing of time and the elderly. It's also the WeChat group name for the local Chinese elderly community my grandparents joined 13 years ago. Coming to the US with their immigrant children, my grandparents are one of many who've left behind their heritage, homeland, and daily way of life. They're two of the most important people in my life, and I hope to make their sacrifice worth it. </p>
+        <p class="photo-blurb">夕阳红, or "xi yang hong", translates literally to sunset red––a euphemism for the passing of time and the elderly. It's also the WeChat group name for the local Chinese elderly community my grandparents joined 13 years ago. Coming to the US with their immigrant children, my grandparents are one of many who've left behind their heritage, homeland, and daily way of life. </p>
         <div class="row">
             <div class="column">
                 <img src="../files/Chinese Festival/d.jpg">
