--- a/photo-subpages2/grad.html
+++ b/photo-subpages2/grad.html
@@ -18,7 +18,7 @@
             <a href="./scs-ball.html">Ball Hard</a>
             <a href="./moving.html">Moving</a>
             <a href="#">Graduation</a>
-            <a href="./headshots.html">Headshots</a>
+            <!-- <a href="./headshots.html">Headshots</a> -->
             <a href="./the-tartan.html">The Tartan</a>
         </div>
         <a href="#"><span class="majors">Video</span></a>
