--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="main" id="Home">
     <div class="about">
     <div class="about-text">
-        <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span> and <span class="majors">Film & Visual Media</span>, with a minor in <span class="majors">Social & Political History</span>. Aspiring multimedia journalist interested in 
+        <p id="DeyaIntro">Hi! I’m a <u><a href="https://www.cmu.edu/student-affairs/dean/fifth/index.html" target="_blank">Fifth Year Scholar</a></u> at Carnegie Mellon University studying <span class="majors">Computer Science</span> and <span class="majors">Film & Visual Media</span>, with a minor in <span class="majors">Social & Political History</span>. Aspiring multimedia creator interested in 
         </p>
 
         <ol>
